# AuthFlaskApp

./: .env  app.py  config.py  extensions.py  pyproject.toml  readme.md  requirements.txt
api/: views.py
api/resources/: forum.py
api/schemas/: forum.py  user.py
auth/: decorators.py  helpers.py  views.py
instance/: db.sqlite3
migrations/versions/: 43bc48ea2ae6_.py  60d56becfa86_initial_migrate.py  a1478debf26c_.py  ad135e437197_.py
models/: __init__.py  forum.py  user.py
